# govwatch

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/routes/: contracts.py
backend/app/services/: embeddings.py  run_embeddings.py  scraper.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/components/: search-results.tsx
frontend/components/ui/: button-about.tsx  button-search.tsx  placeholders-and-vanish-input.tsx
frontend/lib/: api.ts
