[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Arush Mehrotra",email = "43364437+arush-mehrotra@users.noreply.github.com"}
]
readme = "README.md"
packages = [{ include = "app"  }]
requires-python = ">=3.11, <4.0"
dependencies = [
    "pinecone[grpc] (>=6.0.1,<7.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "google (>=3.0.0,<4.0.0)",
    "google-genai (>=1.3.0,<2.0.0)"
]

[tool.poetry.scripts]
start = "app.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
